--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -541,158 +541,42 @@
 
 
 
-
-
-
-
-
-
-/*.movie-card {
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  min-height: 300px;
-  display: block;
-  margin-bottom:30px;
-  border-radius: 8px;
-  box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.25);
-  position: relative;
-}
+.movie-card {background-size: contain;background-repeat: no-repeat;width: 100%;height: 100%;min-height: 300px;display: block;margin-bottom:30px;border-radius: 8px;/*box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.25);*/position: relative;}
 @media screen and (max-width: 800px) {
-  .movie-card {
-    width: 100%;
-    max-width: 100%;
-    min-height:240px;
-  }
+  .movie-card {width: 100%;max-width: 100%;min-height:240px;}
 }
 @media screen and (max-width: 600px) {
-  .movie-card {
-    background-position: 50% 0%;
-    background-size: cover;
-    height: 400px;
-  }
+  .movie-card {background-position: 50% 0%;background-size: cover;height: 400px;}
 }
-.movie-card[data-movie="Blade Runner"] {
-  background-image: url(https://live.staticflickr.com/4776/25936175257_678a2299ec_b.jpg);
-}
-
-.movie-card__overlay {
-  width: 100%;
-  height: 100%;
-  border-radius: 8px;
-  background: linear-gradient(to right, rgba(42, 159, 255, 0.2) 0%, #212120 47%, #212120 100%);
-  background-blend-mode: multiply;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-}
+.movie-card[data-movie="Blade Runner"]{background-image: url(https://images.unsplash.com/photo-1561132680-1c6abcf10a81?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);}
+.movie-card__overlay {width: 100%;height: 100%;border-radius: 8px;background: linear-gradient(to right, rgba(42, 159, 255, 0.2) 0%, #212120 45%, #212120 100%);background-blend-mode: multiply;position: absolute;top: 0;bottom: 0;right: 0;left: 0;}
 @media screen and (max-width: 600px) {
   .movie-card__overlay {
     background: linear-gradient(to bottom, rgba(42, 159, 255, 0.2) 0%, #212120 60%, #212120 100%);
   }
 }
-.movie-card__share {
-  padding: 1em;
-  display: inline-block;
-  width: 100%;
-  max-width: 130px;
-}
-@media screen and (max-width: 600px) {
-  .movie-card__share {
-    display: block;
-    width: 100%;
-  }
-}
-.movie-card__icon {
-  color: #ffffff;
-  mix-blend-mode: lighten;
-  opacity: .4;
-  background: none;
-  padding: 0;
-}
-.movie-card__icon:hover {
-  opacity: 1;
-  mix-blend-mode: lighten;
-}
-.movie-card__icon:not(:first-of-type) {
-  margin-left: 5px;
-}
-.movie-card__icon i {
-  font-size: 1.2em;
-}
-.movie-card__content {
-  width: 100%;
-  max-width: 400px;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  position: relative;
-  float: right;
-  padding:15px 20px 20px 0;
-}
+.movie-card__content {width: 100%;max-width:430px;display: flex;align-items: flex-start;flex-direction: column;position: relative;float: right;padding:15px 20px 20px 0;}
+.movie-card__content a{text-decoration:none;color:#fff;font-size:17px;display:block;margin:10px 0;}
 @media screen and (max-width: 1000px) {
-  .movie-card__content {
-    width: 50%;
-  }
+  .movie-card__content {width: 50%;}
 }
 @media screen and (max-width: 600px) {
-  .movie-card__content {
-    margin-top: 4.2em;
-    width: 100%;
-    float: inherit;
-    max-width: 100%;
-    padding: 0 1em 1em;
-  }
+  .movie-card__content {margin-top: 1em;width: 100%;float: inherit;max-width: 100%;padding: 0 1em 1em;}
 }
-.movie-card__header {
-  margin-bottom: 2em;
+.movie-card__header{margin-bottom: 0;}
+.movie-card__title {color:#fff;margin:-5px 0 10px 0;}
+.movie-card__info {text-transform: uppercase;letter-spacing: 2px;font-size: .8em;color: #2a9fff;line-height: 1;margin: 0;font-weight: 700;opacity: .5;}
+.movie-card__desc {font-weight: 300;color:#fff;}
+.movie-card__content .btn{padding: .5rem 2rem;/*background-color: rgba(255, 255, 255, 0.4);*/color: white;}
+.btn-outline{background-color: transparent;border: 3px solid #ffffff;}
+.btn-outline:hover {border-color: #2a9fff;color: #2a9fff;box-shadow: 0px 1px 8px 0px rgba(245, 199, 0, 0.2);}
+@media screen and (max-width:640px){
+  .movie-card__title {margin:160px 0 5px 0;}
+  .movie-card__content a{font-size:15px;margin:7px;}
+  .movie-card[data-movie="Blade Runner"]{margin-bottom:60px;}
 }
-.movie-card__title {
-  color: #ffffff;
-  margin-bottom: .25em;
-  opacity: .75;
-}
-.movie-card__info {
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: .8em;
-  color: #2a9fff;
-  line-height: 1;
-  margin: 0;
-  font-weight: 700;
-  opacity: .5;
-}
-.movie-card__desc {
-  font-weight: 300;
-  opacity: .84;
-  margin-bottom: 2em;
-  color:#ccc;
+@media screen and (min-width:641px) and (max-width:1199px){
+  .movie-card__content a{font-size:15px;margin:7px 0;}
+  .movie-card__title {margin:-10px 0 3px 0;}
 }
 
-.btn {
-  padding: .5rem 2rem;
-  background-color: rgba(255, 255, 255, 0.4);
-  color: white;
-}
-
-.btn-outline {
-  background-color: transparent;
-  border: 3px solid #ffffff;
-}
-
-.btn::before {
-  font-family: 'Material Icons';
-  content: '\e037';
-  vertical-align: middle;
-  font-size: 1.5em;
-  padding-right: .5em;
-}
-
-.btn-outline:hover {
-  border-color: #2a9fff;
-  color: #2a9fff;
-  box-shadow: 0px 1px 8px 0px rgba(245, 199, 0, 0.2);
-}*/
