--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -6,7 +6,7 @@
   <div class="codes common_layout">
     
       <div class="lt_cnt">
-        <h2>Best Deals of Amazon</h2>
+        <h2>Daily Deals of Amazon</h2>
         
        <div class="toggle">
           <ul>
@@ -27,7 +27,7 @@
               </ul>
             </li> -->
             <li class="last7days bestdeals">
-              <a href="#n">LAST 7 DAYS BEST DEALS</a>
+              <a href="#n">LAST 7 DAYS DAILY DEALS</a>
               <ul>
                 <%= render 'shared/bestdeals_days' %>
               </ul>
@@ -35,7 +35,7 @@
           </ul>
         </div><!--./toggle-->
         <div class="last7days_pc bestdeals">
-          <p>LAST 7 DAYS BEST DEALS LIST</p>
+          <p>LAST 7 DAYS DAILY DEALS</p>
           <ul>
             <%= render 'shared/bestdeals_days' %>
           </ul>
@@ -54,9 +54,10 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>The Best Deals We've Picked On Amazon Jul. 08. 2019.<!-- <em>We pick the best deals from all categories of Amazon!! We just hope you like it :D</em> --></h2>
+        <h2>Daily Deals We've Picked On Amazon Jul. 08. 2019.</h2>
         
         <div class="sort_box clearfix">
+          <!-- <div class="deals_des">We pick the best deals from all categories of Amazon!! We just hope you like it :D</div> -->
           <ul>
             <li><a href="/deals/promo_codes" class="pure-button">All Codes</a></li>
             <li><a href="#" class="pure-button sort1">Price High</a></li>
@@ -68,6 +69,23 @@
         
         <div class="card_wrap sort-list">
           <%= render 'shared/amz_search' %>
+
+            <div id="movie-card-list">
+              <div class="movie-card" data-movie="Blade Runner">
+                <div class="movie-card__overlay"></div>                
+                <div class="movie-card__content">
+                  <div class="movie-card__header">
+                    <h1 class="movie-card__title">Amazon Prime Day 2019</h1>
+                    <!-- <h4 class="movie-card__info">(1982) Sci-Fi, Thriller</h4> -->
+                  </div>
+                  <p class="movie-card__desc">Prime Day 2019 is a two-day parade of epic deals, starting July 15 at 12am through July 16. Prime Day is an annual celebration with awesome deals and exciting product launches, plus live entertainment and more, exclusively for Prime members.</p>
+                  <a target="_blank" class="try_prime" href="https://amzn.to/2YcWjd1">"Try Free 30-day Trial"</a>
+                  <!-- <button class="btn btn-outline movie-card__button" type="button">Watch Trailer</button> -->
+                  <a class="btn btn-outline movie-card__button" target="_blank" href="https://amzn.to/2LJ977V">Get Prime-Day Deals</a>
+                </div>
+              </div>
+            </div>
+
           <%= render 'deals/body_bestdeals' %>
         </div>
         <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_05">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
