--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -40,7 +40,7 @@
                 </ul>
               </li>
               <li class="last7days">
-                <a href="#n">LAST 7 DAYS CODES LIST</a>
+                <a href="#n">LAST 7 DAYS PROMO CODES</a>
                 <ul>
                   <%= render 'shared/promocodes_days' %>
                 </ul>
@@ -48,7 +48,7 @@
             </ul>
           </div><!--./toggle-->
           <div class="last7days_pc">
-            <p>LAST 7 DAYS CODES LIST</p>
+            <p>LAST 7 DAYS PROMO CODES</p>
             <ul>
               <%= render 'shared/promocodes_days' %>
             </ul>
@@ -82,25 +82,22 @@
           <div class="card_wrap sort-list">
             <%= render 'shared/amz_search' %>
 
-            <!-- <div id="movie-card-list">
+            <div id="movie-card-list">
               <div class="movie-card" data-movie="Blade Runner">
-                <div class="movie-card__overlay"></div>
-                <div class="movie-card__share">
-                  <button class="movie-card__icon"><i class="material-icons">&#xe87d</i></button>
-                  <button class="movie-card__icon"><i class="material-icons">&#xe253</i></button>
-                  <button class="movie-card__icon"><i class="material-icons">&#xe80d</i></button>
-                </div>
+                <div class="movie-card__overlay"></div>                
                 <div class="movie-card__content">
                   <div class="movie-card__header">
-                    <h1 class="movie-card__title">Blade Runner</h1>
-                    <h4 class="movie-card__info">(1982) Sci-Fi, Thriller</h4>
+                    <h1 class="movie-card__title">Amazon Prime Day 2019</h1>
+                    <!-- <h4 class="movie-card__info">(1982) Sci-Fi, Thriller</h4> -->
                   </div>
-                  <p class="movie-card__desc">A blade runner must pursue and try to terminate four replicants who stole a ship in space and have returned to Earth to find their creator.</p>
-                  <button class="btn btn-outline movie-card__button" type="button">Watch Trailer</button>
+                  <p class="movie-card__desc">Prime Day 2019 is a two-day parade of epic deals, starting July 15 at 12am through July 16. Prime Day is an annual celebration with awesome deals and exciting product launches, plus live entertainment and more, exclusively for Prime members.</p>
+                  <a target="_blank" class="try_prime" href="https://amzn.to/2YcWjd1">"Try Free 30-day Trial"</a>
+                  <!-- <button class="btn btn-outline movie-card__button" type="button">Watch Trailer</button> -->
+                  <a class="btn btn-outline movie-card__button" target="_blank" href="https://amzn.to/2LJ977V">Get Prime-Day Deals</a>
                 </div>
               </div>
             </div>
- -->
+
             <%= render 'deals/body_promocode' %>
           </div>
           <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_02">GO TO PROMO CODES OF YESTERDAY</a></h2>
