--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -48,6 +48,186 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="50" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JmEiEv"><img src="https://images-na.ssl-images-amazon.com/images/I/31z3F3JssZL.jpg" alt="Sony MDRXB510AS/B Extra Bass Wired Headphones" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>282 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JmEiEv">Sony MDRXB510AS/B Extra Bass Wired Headphones, Best Sports Headphones W/Mic IPX5 Stereo Sweatproof Earbuds...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JmEiEv">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="42" data-price="49.56">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LJ7IOz"><img src="https://images-na.ssl-images-amazon.com/images/I/71DDxRspFDL._SX522_.jpg" alt="Logitech G502 Proteus Spectrum RGB Tunable Gaming Mouse" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>3,517 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>42% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LJ7IOz">Logitech G502 Proteus Spectrum RGB Tunable Gaming Mouse, 12,000 DPI On-The-Fly DPI Shifting, Personalized Weight...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.56</span><span class="ori_price">$84.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LJ7IOz">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="37.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JAXjSy"><img src="https://images-na.ssl-images-amazon.com/images/I/71UujfJCrGL._SX679_.jpg" alt="Crucial 8GB Single DDR3/DDR3L" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>8,834 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JAXjSy">Crucial 8GB Single DDR3/DDR3L 1600 MT/S (PC3-12800) Unbuffered SODIMM 204-Pin Memory - CT102464BF160B</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$37.99</span><span class="ori_price">$75.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JAXjSy">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="52" data-price="29.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XCP4ze"><img src="https://images-na.ssl-images-amazon.com/images/I/61964ezLCKL._SX679_.jpg" alt="Samsung Qi Certified Fast Charge Wireless Charging Pad" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>6,630 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>52% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XCP4ze">Samsung Qi Certified Fast Charge Wireless Charging Pad + Stand - Supports wireless charging on Qi...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.00</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XCP4ze">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="56" data-price="39.44">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LGxrqU"><img src="https://images-na.ssl-images-amazon.com/images/I/61mCld7klVL._SX679_.jpg" alt="3M Privacy Filter for 14" Widescreen Laptop" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>265 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>56% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LGxrqU">3M Privacy Filter for 14" Widescreen Laptop, Protects your confidential information, Black out side views, Reduces blue light (PF140W9B)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.44</span><span class="ori_price">$88.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LGxrqU">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="56" data-price="211.51">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LF22oN"><img src="https://images-na.ssl-images-amazon.com/images/I/81U4Fw6p-BL._SX522_.jpg" alt="ASA JTV24DC LED TV with Integrated HDTV" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>7 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>56% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LF22oN">ASA JTV24DC LED TV with Integrated HDTV</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$211.51</span><span class="ori_price">$479.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LF22oN">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="149.58">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LFUDFG"><img src="https://images-na.ssl-images-amazon.com/images/I/91piNn-QuYL._SX679_.jpg" alt="NAXA 720p HD Class LED TV" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>5 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LFUDFG">NAXA Electronics NTD-2460 24-inch 720p HD Class LED TV with Built-in Sound Bar & DVD Player, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$149.58</span><span class="ori_price">$299.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LFUDFG">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JkbSdY"><img src="https://images-na.ssl-images-amazon.com/images/I/81SGQtU8dDL._SY679_.jpg" alt="Garmin Speak with Amazon Alexa" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3.jpg' %>"><p>355 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JkbSdY">Garmin Speak with Amazon Alexa, What You Love About Amazon Alexa— Now in Your car, 010-01862-01</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.99</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JkbSdY">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="56" data-price="35.54">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XxIl4z"><img src="https://images-na.ssl-images-amazon.com/images/I/71k02T6KxML._SX679_.jpg" alt="Linksys WRT54GL Wi-Fi Wireless-G Broadband Router" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>6,346 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>56% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XxIl4z">Linksys WRT54GL Wi-Fi Wireless-G Broadband Router</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$35.54</span><span class="ori_price">$79.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XxIl4z">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="66.84">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LO1HQu"><img src="https://images-na.ssl-images-amazon.com/images/I/81yo-O%2BhICL._SX522_.jpg" alt="Logitech G433 7.1 Wired Gaming Headset" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>259 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LO1HQu">Logitech G433 7.1 Wired Gaming Headset with DTS Headphone: X 7.1 Surround for PC, PS4, PS4 PRO,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$66.84</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LO1HQu">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="44.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2LGddgV"><img src="https://images-na.ssl-images-amazon.com/images/I/71byqhFJGZL._SX522_.jpg" alt="Philips electric toothbrush" /></a>
