--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -27,6 +27,207 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="20" data-price="12.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LQ9Fcf"><img src="https://m.media-amazon.com/images/I/717y8vI2OxL._SR400,400_.jpg" alt="Christian T Shirts" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>26 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LQ9Fcf">Qrupoad Be Kind Tees Women Kindness Graphic Tee Short Sleeve Christian T Shirts</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.79</span><span class="ori_price">$15.99</span></address>
+      <p><span>Take <strong>20% off at $15.99</strong> with promo code: <strong>207V5CVL</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LQ9Fcf">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="17.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30ePTuO"><img src="https://m.media-amazon.com/images/I/51cZANlq9OL._SR400,400_.jpg" alt="Swing Mini Dress" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>27 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30ePTuO">YIBOCK Women's Summer Short Sleeve V Neck Button Ruffle Swing Mini Dress</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.49</span><span class="ori_price">$24.99</span></address>
+      <p><span>Take <strong>30% off at $24.99</strong> with promo code: <strong>30D4CKAI</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 11, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30ePTuO">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="5.60">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JqyOY0"><img src="https://m.media-amazon.com/images/I/51zKm1EPl3L._SR400,400_.jpg" alt="UNIFON Facial Clay Mask Natural French Mineral Mud" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>15 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JqyOY0">UNIFON Facial Clay Mask Natural French Mineral Mud, Deep Pore Cleansing, Super Pore Reducer and Minimizer，...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.60</span><span class="ori_price">$15.99</span></address>
+      <p><span>Take <strong>65% off at $15.99</strong> with promo code: <strong>65OFZD8Z</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JqyOY0">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="9.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LGOV6l"><img src="https://m.media-amazon.com/images/I/713qL-agP6L._SR400,400_.jpg" alt="momok Woven Laundry Basket" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>4 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LGOV6l">momok Woven Laundry Basket, Large Cotton Rope Plant Basket Flower Pot Indoor Storage Basket for Blankets...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.00</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>70% off at $29.99</strong> with promo code: <strong>70UMTKHI</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LGOV6l">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LIZIx0"><img src="https://m.media-amazon.com/images/I/71vGC2WCf7L._SR400,400_.jpg" alt="YOREPEK Travel Laptop Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>2,140 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LIZIx0">YOREPEK Travel Laptop Backpack, Extra Large College School Backpack for Men and Women with USB Charging Port,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$39.99</span><span class="ori_price">$49.99</span></address>
+      <p><span>Take <strong>20% off at $49.99</strong> with promo code: <strong>209FIUC8</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 16, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LIZIx0">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JnkAZf"><img src="https://m.media-amazon.com/images/I/71QkQx-zVtL._SR400,400_.jpg" alt="NEEKFOX Men’s Cushion Crew Hiking Socks" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>180 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JnkAZf">NEEKFOX Men’s Cushion Crew Hiking Socks Multi Performance Outdoor Sport Moisture Wicking Socks</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.49</span><span class="ori_price">$24.99</span></address>
+      <p><span>Take <strong>50% off at $24.99</strong> with promo code: <strong>506PH2CJ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 08, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JnkAZf">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="25.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JjzkYV"><img src="https://m.media-amazon.com/images/I/81MNYm0VH3L._SR400,400_.jpg" alt="Denim Pants" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>367 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JjzkYV">Women's Hight Waisted Butt Lift Stretch Ripped Skinny Jeans Distressed Denim Pants</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.49</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>15% off at $29.99</strong> with promo code: <strong>15Q3DZH9</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JjzkYV">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="19.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XvwvN2"><img src="https://m.media-amazon.com/images/I/71BOzi0A50L._SR400,400_.jpg" alt="Skirt BL Women's Winter Jacket" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>96 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XvwvN2">Skirt BL Women's Winter Jacket Casual Thicken Hooded Fleece Lining Zipper Padded Coat</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.50</span><span class="ori_price">$38.99</span></address>
+      <p><span>Take <strong>50% off at $38.99</strong> with promo code: <strong>5051EL6G</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XvwvN2">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="65.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XAtKKD"><img src="https://m.media-amazon.com/images/I/61JC-WcNtOL._SR400,400_.jpg" alt="Electric Air Fryer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>4 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XAtKKD">PERSHOW 3.7-Quart, Electric Air Fryer, Comes with Recipes & CookBook - Auto Shut off & Timer</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$65.99</span><span class="ori_price">$109.99</span></address>
+      <p><span>Take <strong>40% off at $109.99</strong> with promo code: <strong>408Q6Q2R</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XAtKKD">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="12.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XzWenC"><img src="https://m.media-amazon.com/images/I/51HR3mMucwL._SR400,400_.jpg" alt="Dragon Fit High Waist Yoga Leggings" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>523 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XzWenC">Dragon Fit High Waist Yoga Leggings with 3 Pockets,Tummy Control Workout Running 4 Way Stretch Yoga Pants</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.59</span><span class="ori_price">$20.98</span></address>
+      <p><span>Take <strong>40% off at $20.98</strong> with promo code: <strong>40BKLF4Q</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 11, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XzWenC">Use Code at Amazon</a></div>
+</div>
+
+
 <div class="card clearfix" data-score="20" data-price="23.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2XvvxRa"><img src="https://m.media-amazon.com/images/I/61zAjrtjeXL._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
